[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seed"
version = "0.1.0"
description = "Personal methodology distillation system for videos, books, and agent skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
  "yt-dlp>=2025.1.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.6",
]

[project.scripts]
seed = "seed.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/seed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
